tests/compile_fail/eq/unknown_field_attribute.stderr
error: expected one of: `with`, `skip`, `ignore`
 --> tests/compile_fail/eq/unknown_field_attribute.rs:2:17
  |
2 | struct Foo(#[eq(unknown)] i32);
  |                 ^^^^^^^

error: expected one of: `with`, `skip`, `ignore`
  --> tests/compile_fail/eq/unknown_field_attribute.rs:12:16
   |
12 |     Bar { #[eq(unknown)] i: i32 },
   |                ^^^^^^^
